<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:background="@color/black"
    android:padding="10dp">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/labelEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sans_500"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:imeOptions="actionSend"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/labelEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/labelEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/llEmailError"/>

    <ImageView
        android:id="@+id/checkmark_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        android:paddingEnd="6dp"
        android:visibility="invisible"
        />

    <LinearLayout
        android:id="@+id/llEmailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/labelPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cross" />

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="wrap_content"
            android:fontFamily="@font/sans_300"
            android:layout_height="wrap_content"
            android:text="@string/email_error_text"
            android:textColor="@color/white" />


    </LinearLayout>

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sans_500"
        android:text="@string/create_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/llEmailError" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/see_criteria_below"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/labelPassword"
        app:layout_constraintTop_toBottomOf="@+id/labelPassword"
        app:layout_constraintBottom_toTopOf="@+id/labelRepeatPassword"/>

    <ImageView
        android:id="@+id/checkmark_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        android:paddingEnd="6dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/labelRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sans_500"
        android:text="@string/repeat_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextRepeatPassword"/>

    <EditText
        android:id="@+id/editTextRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/labelRepeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/labelRepeatPassword"
        app:layout_constraintBottom_toTopOf="@+id/llPasswordError"/>

    <ImageView
        android:id="@+id/checkmark_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        app:layout_constraintTop_toTopOf="@+id/editTextRepeatPassword"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRepeatPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextRepeatPassword"
        android:paddingEnd="6dp"
        android:visibility="invisible"/>


    <LinearLayout
        android:id="@+id/llPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextRepeatPassword"
        app:layout_constraintBottom_toTopOf="@+id/llPasswordNotMatch"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cross"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_300"
            android:textColor="@color/white"
            android:text="@string/password_error_text1"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPasswordNotMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llPasswordError"
        app:layout_constraintStart_toStartOf="@+id/llPasswordError"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordCon"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cross"/>
        <TextView
            android:id="@+id/tvPasswordNoMatch"
            android:layout_width="wrap_content"
            android:fontFamily="@font/sans_300"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/passoword_error_text2" />


    </LinearLayout>



    <TextView
        android:id="@+id/editTextPasswordCon"
        android:layout_width="300dp"
        android:layout_height="80sp"
        android:fontFamily="@font/sans_300"
        android:text="@string/password_constraints"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextRepeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/llPasswordNotMatch"
        app:layout_constraintBottom_toTopOf="@+id/rlButton"/>


    <RelativeLayout
        android:id="@+id/rlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="@dimen/material_emphasis_disabled"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordCon"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordCon"
        android:focusable="true">

        <ImageView
            android:id="@+id/imgButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            tools:srcCompat="@drawable/gradient_button_background"
            android:src="@drawable/gradient_button_background"/>

        <TextView
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imgButton"
            android:fontFamily="@font/sans_500"
            android:layout_alignTop="@+id/imgButton"
            android:layout_alignEnd="@+id/imgButton"
            android:layout_alignBottom="@+id/imgButton"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>







</androidx.constraintlayout.widget.ConstraintLayout>