<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    android:padding="70dp">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/first_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />


    <TextView
        android:id="@+id/first_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sans_500"
        android:text="@string/main_label1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bonus_one"
        app:layout_constraintStart_toStartOf="@+id/company_logo"
        app:layout_constraintEnd_toEndOf="@+id/company_logo"
        app:layout_constraintTop_toBottomOf="@+id/company_logo" />


    <ImageView
        android:id="@+id/check_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bonus_one"
        app:layout_constraintStart_toStartOf="@+id/company_logo"
        app:layout_constraintTop_toTopOf="@+id/bonus_one"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/check_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bonus_two"
        app:layout_constraintStart_toStartOf="@+id/company_logo"
        app:layout_constraintTop_toTopOf="@+id/bonus_two"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/check_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bonus_three"
        app:layout_constraintStart_toStartOf="@+id/company_logo"
        app:layout_constraintTop_toTopOf="@+id/bonus_three"
        app:srcCompat="@drawable/tick" />


    <TextView
        android:id="@+id/bonus_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/sans_300"
        android:text="@string/main_label3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bonus_two"
        app:layout_constraintLeft_toRightOf="@+id/check_car"
        app:layout_constraintTop_toBottomOf="@+id/first_line" />

    <TextView
        android:id="@+id/bonus_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sans_300"
        android:text="@string/main_label4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bonus_three"
        app:layout_constraintStart_toEndOf="@+id/check_request"
        app:layout_constraintTop_toBottomOf="@+id/bonus_one" />

    <TextView
        android:id="@+id/bonus_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/sans_300"
        android:text="@string/main_label5"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_container"
        app:layout_constraintStart_toEndOf="@+id/check_policy"
        app:layout_constraintTop_toBottomOf="@+id/bonus_two" />

    <RelativeLayout
        android:id="@+id/btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/company_logo"
        app:layout_constraintStart_toStartOf="@id/company_logo">

        <ImageView
            android:id="@+id/btn_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@drawable/gradient_button_background" />

        <TextView
            android:id="@+id/btn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn_img"
            android:layout_alignTop="@+id/btn_img"
            android:layout_alignEnd="@+id/btn_img"
            android:layout_alignBottom="@+id/btn_img"
            android:gravity="center"
            android:text="@string/main_btn1"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>